@@ -4,6 +4,7 @@
 * Add - Allow UI customizations on checkout payment fields.
 * Update - Display hardware costs for the period in the transaction list with link to the details page
 * Fix - Incorrect customer links on Transactions page.
+* Fix - Incorrect prices in Payment Request Button for certain currencies.
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
